--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,13 @@ install:
   - yarn install
 script:
   - npm run build
+deploy:
+  provider: pages
+  local_dir: dist/
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  name: brian
+  email: ariutaiaa@gmail.com
+  on:
+    branch: master
